add test case for number of timeseries after migration